--- a/Android/app/src/main/res/layout/activity_register.xml
+++ b/Android/app/src/main/res/layout/activity_register.xml
@@ -10,4 +10,58 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.lintech.yougo.register">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Registration"
+        android:id="@+id/regLbl"
+        android:fontFamily="sans-serif"
+        android:textSize="24sp"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:layout_above="@+id/nameFld"
+        android:layout_centerHorizontal="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:ems="20"
+        android:id="@+id/nameFld"
+        android:layout_above="@+id/emailFld"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="E-mail"
+        android:ems="20"
+        android:id="@+id/emailFld"
+        android:layout_above="@+id/passFld"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="Password"
+        android:ems="20"
+        android:id="@+id/passFld"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:text="Register"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/passFld"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="45dp"
+        android:id="@+id/regBtn" />
+
 </RelativeLayout>
