--- a/Android/app/src/main/res/layout/activity_register.xml
+++ b/Android/app/src/main/res/layout/activity_register.xml
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:hint="Name"
         android:ems="20"
         android:id="@+id/nameFld"
         android:layout_above="@+id/emailFld"
@@ -36,8 +36,8 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:text="E-mail"
+        android:inputType="textEmailAddress"
+        android:hint="E-mail"
         android:ems="20"
         android:id="@+id/emailFld"
         android:layout_above="@+id/passFld"
@@ -47,21 +47,29 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:text="Password"
+        android:inputType="textPassword"
+        android:hint="Password"
         android:ems="20"
         android:id="@+id/passFld"
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/regErrLbl"
+        android:layout_below="@id/passFld"
+        android:textSize="12sp"
+        android:textColor="#ff0000" />
+
     <Button
         android:text="Register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/passFld"
+        android:layout_below="@+id/regErrLbl"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="45dp"
-        android:id="@+id/regBtn" />
+        android:id="@+id/regBtn"
+        android:onClick="signUp"/>
 
 </RelativeLayout>
