--- a/Android/app/src/main/res/layout/activity_register.xml
+++ b/Android/app/src/main/res/layout/activity_register.xml
@@ -72,4 +72,13 @@
         android:id="@+id/regBtn"
         android:onClick="signUp"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/regBtn"
+        android:textSize="12sp"
+        android:layout_centerHorizontal="true"
+        android:text="Already Have an Account"
+        android:onClick="gotoLogin"/>
+
 </RelativeLayout>
