--- a/Android/app/src/main/res/menu/activity_main_drawer.xml
+++ b/Android/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,19 +3,15 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:id="@+id/nav_triplist"
+            android:icon="@drawable/ic_list"
+            android:title="My Trips" />
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:id="@+id/nav_myLoc"
+            android:icon="@drawable/ic_mylocation"
+            android:title="My Location" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Test" />
-        <item
-            android:id="@+id/nav_manage"
+            android:id="@+id/nav_signout"
             android:icon="@drawable/ic_logout"
             android:title="Sign Out" />
     </group>
