--- a/Android/app/src/main/res/layout/activity_register.xml
+++ b/Android/app/src/main/res/layout/activity_register.xml
@@ -36,6 +36,17 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:inputType="textEmailAddress"
+        android:hint="E-mail"
+        android:ems="20"
+        android:id="@+id/emailFld"
+        android:layout_above="@+id/passFld"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:hint="Password"
         android:ems="20"
@@ -56,10 +67,10 @@
         android:text="Register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/regErrLbl"
-        android:layout_centerHorizontal="true"
         android:id="@+id/regBtn"
-        android:onClick="signUp"/>
+        android:onClick="signUp"
+        android:layout_below="@+id/regErrLbl"
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -68,17 +79,8 @@
         android:textSize="12sp"
         android:layout_centerHorizontal="true"
         android:text="Already Have an Account"
+        android:layout_margin="5dp"
+        android:padding="8dp"
         android:onClick="gotoLogin"/>
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
-        android:hint="E-mail"
-        android:ems="20"
-        android:id="@+id/emailFld"
-        android:layout_above="@+id/passFld"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
