--- a/Android/app/src/main/res/layout/activity_new_trip.xml
+++ b/Android/app/src/main/res/layout/activity_new_trip.xml
@@ -1,13 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_new_trip"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.lintech.yougo.newTrip">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:text="Longitude:"
+        android:id="@+id/longTxt" />
+
+    <EditText
+        android:id="@+id/longFld"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="numberDecimal"
+        android:hint="41.316486"
+        android:layout_alignBaseline="@+id/longTxt"
+        android:layout_alignBottom="@+id/longTxt"
+        android:layout_toRightOf="@+id/longTxt"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:layout_toRightOf="@+id/longFld"
+        android:layout_alignBaseline="@+id/longFld"
+        android:layout_marginLeft="10dp"
+        android:text="Latitude:"
+        android:id="@+id/latTxt" />
+
+    <EditText
+        android:id="@+id/latFld"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="numberDecimal"
+        android:layout_toRightOf="@+id/latTxt"
+        android:layout_alignBaseline="@+id/longFld"
+        android:layout_below="@+id/longTxt"
+        android:hint="-73.093164"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:layout_below="@+id/longFld"
+        android:text="Radius(m):"
+        android:id="@+id/radTxt" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:layout_toRightOf="@+id/radTxt"
+        android:layout_alignBaseline="@+id/radTxt"
+        android:hint="500"
+        android:id="@+id/radFld" />
+
+    <com.google.android.gms.maps.MapView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/radFld"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="50dp"
+        android:id="@+id/mapView"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:text="Add Trip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/addTripBtn"
+        android:onClick="addTrip"/>
 
 </RelativeLayout>
