--- a/Android/app/src/main/res/layout/activity_register.xml
+++ b/Android/app/src/main/res/layout/activity_register.xml
@@ -8,79 +8,98 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:gravity="center"
+    android:background="#CFD8DC"
     tools:context="com.lintech.yougo.register">
 
-    <TextView
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Registration"
-        android:id="@+id/regLbl"
-        android:fontFamily="sans-serif"
-        android:textSize="24sp"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:layout_above="@+id/nameFld"
-        android:layout_centerHorizontal="true" />
+        android:paddingTop="60dp"
+        android:paddingBottom="60dp"
+        android:paddingLeft="50dp"
+        android:paddingRight="50dp"
+        android:background="#">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:hint="Name"
-        android:ems="20"
-        android:id="@+id/nameFld"
-        android:layout_above="@+id/emailFld"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Registration"
+            android:id="@+id/regLbl"
+            android:fontFamily="sans-serif"
+            android:textSize="28sp"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:layout_marginBottom="40dp"
+            android:layout_centerHorizontal="true" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
-        android:hint="E-mail"
-        android:ems="20"
-        android:id="@+id/emailFld"
-        android:layout_above="@+id/passFld"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        <EditText
+            android:layout_centerHorizontal="true"
+            android:textAlignment="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:hint="Name"
+            android:ems="10"
+            android:id="@+id/nameFld"
+            android:layout_marginBottom="12dp"
+            android:layout_below="@+id/regLbl" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:hint="Password"
-        android:ems="20"
-        android:id="@+id/passFld"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        <EditText
+            android:layout_centerHorizontal="true"
+            android:textAlignment="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"
+            android:hint="E-mail"
+            android:ems="10"
+            android:id="@+id/emailFld"
+            android:layout_below="@+id/nameFld"
+            android:layout_marginBottom="12dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/regErrLbl"
-        android:layout_below="@id/passFld"
-        android:textSize="12sp"
-        android:textColor="#ff0000" />
+        <EditText
+            android:layout_centerHorizontal="true"
+            android:textAlignment="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:hint="Password"
+            android:ems="10"
+            android:id="@+id/passFld"
+            android:layout_marginBottom="11dp"
+            android:layout_below="@+id/emailFld" />
 
-    <Button
-        android:text="Register"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/regBtn"
-        android:onClick="signUp"
-        android:layout_below="@+id/regErrLbl"
-        android:layout_centerHorizontal="true" />
+        <TextView
+            android:layout_centerHorizontal="true"
+            android:textAlignment="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/regErrLbl"
+            android:layout_below="@id/passFld"
+            android:textSize="12sp"
+            android:layout_marginBottom="25dp"
+            android:textColor="#ff0000" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/regBtn"
-        android:textSize="12sp"
-        android:layout_centerHorizontal="true"
-        android:text="Already Have an Account"
-        android:layout_margin="5dp"
-        android:padding="8dp"
-        android:onClick="gotoLogin"/>
+        <Button
+            android:text="Register"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/regBtn"
+            android:onClick="signUp"
+            android:layout_below="@+id/regErrLbl"
+            android:layout_centerHorizontal="true" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"
+            android:text="Already Have an Account"
+            android:padding="8dp"
+            android:layout_below="@id/regBtn"
+            android:onClick="gotoLogin"
+            android:id="@+id/textView"
+            android:layout_centerHorizontal="true" />
+
+    </RelativeLayout>
 
 </RelativeLayout>
