--- a/Android/app/src/main/res/layout/activity_register.xml
+++ b/Android/app/src/main/res/layout/activity_register.xml
@@ -18,8 +18,7 @@
         android:paddingTop="60dp"
         android:paddingBottom="60dp"
         android:paddingLeft="50dp"
-        android:paddingRight="50dp"
-        android:background="#">
+        android:paddingRight="50dp">
 
         <TextView
             android:layout_width="wrap_content"
