--- a/Android/app/src/main/res/layout/activity_trip_list.xml
+++ b/Android/app/src/main/res/layout/activity_trip_list.xml
@@ -4,19 +4,11 @@
     android:id="@+id/activity_trip_list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.lintech.yougo.TripList">
-
-    <ListView
-        android:id="@+id/tripListView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/relativeLayout">
-    </ListView>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -37,7 +29,7 @@
             android:id="@+id/newtripBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Add Trip"
+            android:text="Edit Trip"
             android:onClick="newTrip"/>
 
     </RelativeLayout>
