--- a/Android/app/src/main/res/layout/activity_register.xml
+++ b/Android/app/src/main/res/layout/activity_register.xml
@@ -9,12 +9,15 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:gravity="center"
-    android:background="#CFD8DC"
+    android:background="#4ABDAC"
     tools:context="com.lintech.yougo.register">
 
-    <RelativeLayout
+    <LinearLayout
+        android:orientation="vertical"
+        android:gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="#ECEFF1"
         android:paddingTop="60dp"
         android:paddingBottom="60dp"
         android:paddingLeft="50dp"
@@ -23,50 +26,70 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Registration"
+            android:text="Register"
             android:id="@+id/regLbl"
-            android:fontFamily="sans-serif"
-            android:textSize="28sp"
+            android:fontFamily="monospace"
+            android:textSize="33sp"
             android:textAlignment="center"
             android:textAllCaps="false"
             android:layout_marginBottom="40dp"
-            android:layout_centerHorizontal="true" />
-
-        <EditText
             android:layout_centerHorizontal="true"
-            android:textAlignment="center"
+            android:textColor="@android:color/black"
+            android:textStyle="normal|bold" />
+
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:hint="Name"
-            android:ems="10"
-            android:id="@+id/nameFld"
             android:layout_marginBottom="12dp"
-            android:layout_below="@+id/regLbl" />
+            android:layout_below="@+id/regLbl"
+            android:background="#dfdce3">
+                <EditText
+                    android:layout_centerHorizontal="true"
+                    android:textAlignment="center"
+                    android:ems="10"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:hint="Name"
+                    android:id="@+id/nameFld"
+                    android:fontFamily="monospace" />
+        </RelativeLayout>
 
-        <EditText
-            android:layout_centerHorizontal="true"
-            android:textAlignment="center"
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
-            android:hint="E-mail"
-            android:ems="10"
-            android:id="@+id/emailFld"
-            android:layout_below="@+id/nameFld"
-            android:layout_marginBottom="12dp" />
+            android:layout_marginBottom="12dp"
+            android:background="#dfdce3">
 
-        <EditText
-            android:layout_centerHorizontal="true"
-            android:textAlignment="center"
+            <EditText
+                android:layout_centerHorizontal="true"
+                android:textAlignment="center"
+                android:ems="10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
+                android:id="@+id/emailFld"
+                android:hint="E-mail" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:hint="Password"
-            android:ems="10"
-            android:id="@+id/passFld"
-            android:layout_marginBottom="11dp"
-            android:layout_below="@+id/emailFld" />
+            android:layout_marginBottom="12dp"
+            android:background="#dfdce3">
+            <EditText
+                android:layout_centerHorizontal="true"
+                android:textAlignment="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:hint="Password"
+                android:ems="10"
+                android:id="@+id/passFld"
+                android:textColor="@android:color/darker_gray"
+                android:fontFamily="monospace" />
+        </RelativeLayout>
 
         <TextView
             android:layout_centerHorizontal="true"
@@ -76,29 +99,34 @@
             android:id="@+id/regErrLbl"
             android:layout_below="@id/passFld"
             android:textSize="12sp"
-            android:layout_marginBottom="25dp"
-            android:textColor="#ff0000" />
+            android:layout_marginBottom="10dp"
+            android:textColor="#FC4A1A" />
 
         <Button
             android:text="Register"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="#FF6E40"
             android:id="@+id/regBtn"
             android:onClick="signUp"
             android:layout_below="@+id/regErrLbl"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:textColor="@android:color/black"
+            android:fontFamily="monospace" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="12sp"
-            android:text="Already Have an Account"
+            android:text="Already a Member?"
             android:padding="8dp"
             android:layout_below="@id/regBtn"
             android:onClick="gotoLogin"
             android:id="@+id/textView"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:textColor="@android:color/black"
+            android:fontFamily="monospace" />
 
-    </RelativeLayout>
+    </LinearLayout>
 
 </RelativeLayout>
