--- a/Android/app/src/main/res/layout/activity_login.xml
+++ b/Android/app/src/main/res/layout/activity_login.xml
@@ -9,57 +9,105 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:gravity="center"
+    android:background="#4ABDAC"
     tools:context="com.lintech.yougo.login">
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="E-mail"
-        android:layout_marginBottom="25dp"
-        android:id="@+id/emailFld"
-        android:inputType="textEmailAddress"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Password"
-        android:id="@+id/passFld"
-        android:inputType="textPassword"
-        android:layout_below="@+id/emailFld"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
+    <LinearLayout
+        android:orientation="vertical"
+        android:gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/logErrLbl"
-        android:layout_below="@+id/passFld"
-        android:textColor="#ff0000"
-        android:textSize="12sp"/>
+        android:background="#ECEFF1"
+        android:paddingTop="60dp"
+        android:paddingBottom="60dp"
+        android:paddingLeft="50dp"
+        android:paddingRight="50dp">
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_below="@id/logErrLbl"
-        android:gravity="center">
-
-        <Button
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="Login"
+            android:id="@+id/regLbl"
+            android:fontFamily="monospace"
+            android:textSize="33sp"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:layout_marginBottom="40dp"
+            android:layout_centerHorizontal="true"
+            android:textColor="@android:color/black"
+            android:textStyle="normal|bold" />
+
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/logBtn"
-            android:onClick="login"/>
+            android:layout_marginBottom="12dp"
+            android:layout_below="@+id/regLbl"
+            android:background="#dfdce3">
 
-        <Button
+            <EditText
+                android:layout_centerHorizontal="true"
+                android:textAlignment="center"
+                android:ems="10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
+                android:hint="E-mail"
+                android:id="@+id/emailFld"
+                android:fontFamily="monospace" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/logBtn"
-            android:text="Sign Up"
-            android:onClick="signup"/>
+            android:layout_marginBottom="12dp"
+            android:layout_below="@+id/regLbl"
+            android:background="#dfdce3">
 
-    </RelativeLayout>
+            <EditText
+                android:layout_centerHorizontal="true"
+                android:textAlignment="center"
+                android:ems="10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:hint="Password"
+                android:id="@+id/passFld"
+                android:fontFamily="monospace" />
+
+        </RelativeLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:text="Login"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="#FF6E40"
+                android:id="@+id/regBtn"
+                android:onClick="login"
+                android:layout_margin="2dp"
+                android:layout_centerHorizontal="true"
+                android:textColor="@android:color/black"
+                android:fontFamily="monospace" />
+
+            <Button
+                android:text="Sign Up"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="#FF6E40"
+                android:id="@+id/regBtn2"
+                android:onClick="signup"
+                android:layout_margin="2dp"
+                android:layout_next="@+id/regBtn"
+                android:layout_centerHorizontal="true"
+                android:textColor="@android:color/black"
+                android:fontFamily="monospace" />
+        </LinearLayout>
+
+    </LinearLayout>
 
 </RelativeLayout>
