--- a/Android/app/src/main/res/layout/activity_trip_list.xml
+++ b/Android/app/src/main/res/layout/activity_trip_list.xml
@@ -10,28 +10,82 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.lintech.yougo.TripList">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_alignParentBottom="true"
-        android:id="@+id/relativeLayout">
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:orientation="vertical"
+        android:paddingTop="50dp"
+        android:paddingBottom="50dp"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp">
 
-        <Button
-            android:id="@+id/signoutBtn"
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/newtripBtn"
-            android:text="Sign Out"
-            android:onClick="signout"/>
+            android:text="You're Trip"
+            android:textSize="25sp"
+            android:layout_marginBottom="25dp"
+            android:textStyle="bold"/>
 
-        <Button
-            android:id="@+id/newtripBtn"
+        <TextView
+            android:id="@+id/longTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Edit Trip"
-            android:onClick="newTrip"/>
+            android:textAlignment="center"
+            android:layout_marginBottom="15dp"
+            android:text="Longitude"/>
 
-    </RelativeLayout>
+        <TextView
+            android:id="@+id/latTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:layout_marginBottom="15dp"
+            android:text="Latitude"/>
+
+        <TextView
+            android:id="@+id/radTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:layout_marginBottom="15dp"
+            android:text="Radius(m)"/>
+
+        <TextView
+            android:id="@+id/emailTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:layout_marginBottom="15dp"
+            android:hint="Email"/>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_alignParentBottom="true"
+            android:id="@+id/relativeLayout">
+
+            <Button
+                android:id="@+id/signoutBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/newtripBtn"
+                android:text="Sign Out"
+                android:onClick="signout"/>
+
+            <Button
+                android:id="@+id/newtripBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Edit Trip"
+                android:onClick="newTrip"/>
+
+        </RelativeLayout>
+
+    </LinearLayout>
 
 </RelativeLayout>
