Made little fixes to UI and UX of registration and login activity

--- a/Android/app/src/main/res/layout/activity_register.xml
+++ b/Android/app/src/main/res/layout/activity_register.xml
@@ -120,7 +120,8 @@
             android:layout_height="wrap_content"
             android:textSize="12sp"
             android:text="Already a Member?"
-            android:padding="8dp"
+            android:layout_marginTop="5dp"
+            android:padding="10dp"
             android:layout_below="@id/regBtn"
             android:onClick="gotoLogin"
             android:id="@+id/textView"
