--- a/Android/app/src/main/res/layout/activity_login.xml
+++ b/Android/app/src/main/res/layout/activity_login.xml
@@ -77,6 +77,16 @@
 
         </RelativeLayout>
 
+        <TextView
+            android:textAlignment="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/logErrLbl"
+            android:layout_below="@id/passFld"
+            android:textSize="12sp"
+            android:textColor="#FC4A1A"
+            android:layout_marginBottom="10dp"/>
+
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="wrap_content"
@@ -102,7 +112,6 @@
                 android:id="@+id/regBtn2"
                 android:onClick="signup"
                 android:layout_margin="2dp"
-                android:layout_next="@+id/regBtn"
                 android:layout_centerHorizontal="true"
                 android:textColor="@android:color/black"
                 android:fontFamily="monospace" />
