Going to ask for help from Google

--- a/Android/app/src/main/res/layout/activity_trip_list.xml
+++ b/Android/app/src/main/res/layout/activity_trip_list.xml
@@ -147,6 +147,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
+        android:onClick="goToMap"
         app:fabSize="mini"
         app:srcCompat="@android:drawable/ic_dialog_map"
         android:layout_alignParentTop="true"
